loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:3: error: ';' expected but '{' found.
}while (crossing == true) {
                          ^