loopdowhile.Poucet2.scala.code
do {
  avance()
}while (crossing == true) {
  avance()
}